fix overflow of hover text in portfolio  on small window

--- a/style.css
+++ b/style.css
@@ -169,7 +169,9 @@
 
 #artinfo{
     padding: 10px;
-    width: 70%;
+    width: 55%;
+    height: 25vh;
+    overflow: scroll;
     }
 
 #artinfo a{
@@ -185,7 +187,7 @@
     opacity: .9;
     float: right;
     color: white;
-    width: 30%;
+    width: 35%;
     height: 150px;
     text-align: center;
 }
